# magnetize

./: Cargo.toml  README.md
src/: cid.rs  cli.rs  db.rs  error.rs  lib.rs  magnet.rs  main.rs  migrate.rs  peers.rs  rasl.rs  request.rs  server.rs  url.rs  util.rs
