[package]
name = "magenc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mag"
path = "src/bin/main.rs"

[dependencies]
axum = { version = "0.8.3", features = ["multipart"] }
clap = { version = "4.5.35", features = ["derive"] }
data-encoding = "2.8.0"
sha2 = "0.10.8"
tokio = { version = "1.44.2", features = [
    "fs",
    "io-std",
    "io-util",
    "rt-multi-thread",
] }
