[package]
name = "magnetize"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mag"
path = "src/bin/main.rs"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
clap = { version = "4.5.37", features = ["derive"] }
data-encoding = "2.9.0"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = [
    "fs",
    "io-std",
    "io-util",
    "rt",
    "rt-multi-thread",
] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
